--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "2MB",
-                  "maximumError": "4KsMB"
+                  "maximumError": "4MB"
                 },
                 {
                   "type": "anyComponentStyle",
